About us-page updated

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -162,7 +162,7 @@
 						<h1>
 							Om oss
 						</h1>
-						<p>
+						<p class="text-white common-BodyTitle">
 							Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT.
 							<br>
 							Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
@@ -181,31 +181,32 @@
 				<div class="wrap">
 
 					<div class="fix-10-12 left margin-top-1">
-						<h2>
+						<h2 class="common-IntroText">
 							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
 						</h2>
-							<p>
-								Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader.
-								Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden.
-								Våra grundare och ägare är alltjämt aktiva i företaget.
-							</p>
-							<p>Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
-							<p>
-								Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
-								<br>
-								Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.
-								<br>
-								Vi erbjuder kompletta besiktningsgrupper för samtligafack.</p>
-							<p>
-								Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
-							<p>
-								Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag.
-							</p>
-							<p>
-								Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
-								har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
-							</p>
-							<a class="text-blue bold fromLeft popupTrigger" href="../helhetskoncept/"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
+						<p class="common-BodyText">
+							Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader.
+							Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden.
+							Våra grundare och ägare är alltjämt aktiva i företaget.
+						</p>
+						<p class="common-BodyText">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
+						<p class="common-BodyText">
+							Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
+							Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.
+							Vi erbjuder kompletta besiktningsgrupper för samtligafack.
+						</p>
+						<p class="common-BodyText">
+							Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
+						<p class="common-BodyText">
+							Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag.
+						</p>
+						<p class="common-BodyText">
+							Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen,
+							har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt
+						</p>
+						<a href="../helhetskoncept/">
+							<p class="common-Link">Mer om vår digitaliserade besiktningsprocess<i class="icono-arrow2-left"></i></p>
+						</a>
 					</div>
 
 				</div>
@@ -219,42 +220,42 @@
 				<div class="wrap left">
 
 					<div class="fix-10-12">
-						<h2>Ledning</h2>
+						<h2 class="common-IntroText">Ledning</h2>
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
-								<h3>Magnus Janson</h3>
-								<p class="micro bold">Verkställande Direktör</p>
+								<h3 class="common-BodyTitle">Magnus Janson</h3>
+								<p class="common-BodyText">Verkställande Direktör</p>
 								<a href="mailto:magnus.janson@besiktningsman.se">
-									<p class="micro bold text-blue">magnus.janson@besiktningsman.se</p>
+									<p class="common-Link">magnus.janson@besiktningsman.se</p>
 								</a>
 							</li>
 							<li class="col-3-12">
-								<h3>Marie Selling</h3>
-								<p class="micro bold">Projekt & Ekonomichef</p>
+								<h3 class="common-BodyTitle">Marie Selling</h3>
+								<p class="common-BodyText">Projekt & Ekonomichef</p>
 								<a href="mailto:marie@besiktningsman.se">
-									<p class="micro bold text-blue">marie@besiktningsman.se</p>
+									<p class="common-Link">marie@besiktningsman.se</p>
 								</a>
 							</li>
 							<li class="col-3-12">
-								<h3>Björn Selling</h3>
-								<p class="micro bold">Affärschef</p>
+								<h3 class="common-BodyTitle">Björn Selling</h3>
+								<p class="common-BodyText">Affärschef</p>
 								<a href="mailto:bjorn@besiktningsman.se">
-									<p class="micro bold text-blue">bjorn@besiktningsman.se</p>
+									<p class="common-Link">bjorn@besiktningsman.se</p>
 								</a>
 							</li>
 							<li class="col-3-12">
-								<h3>Jonny Seidel</h3>
-								<p class="micro bold">Arbetande styrelseordförande</p>
+								<h3 class="common-BodyTitle">Jonny Seidel</h3>
+								<p class="common-BodyText">Arbetande styrelseordförande</p>
 								<a href="mailto:jonny@besiktningsman.se">
-									<p class="micro bold text-blue">jonny@besiktningsman.se</p>
+									<p class="common-Link">jonny@besiktningsman.se</p>
 								</a>
 							</li>
 							<li class="col-3-12">
-								<h3>Martin Viberg</h3>
-								<p class="micro bold">Besiktningschef</p>
+								<h3 class="common-BodyTitle">Martin Viberg</h3>
+								<p class="common-BodyText">Besiktningschef</p>
 								<a href="mailto:martin@besiktningsman.se">
-									<p class="micro bold text-blue">martin@besiktningsman.se</p>
+									<p class="common-Link">martin@besiktningsman.se</p>
 								</a>
 							</li>
 						</ul>
@@ -267,12 +268,8 @@
 
 	<section class="slide whiteSlide margin-bottom-2">
 		<div class="container-lg">
-			<div class="wrap">
-				<h2 class="fix-10-12">Några uppdragsgivare och samarbetspartners</h2>
-			</div>
-		</div>
-		<div class="container-lg">
 				<div class="fix-10-12">
+						<h2 class="common-IntroText">Några uppdragsgivare och samarbetspartners</h2>
 						<ul class="flex grid-68 tintLogos equal">
 							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
 								<div class="table wide equalElement">
