Updating the style of the news page

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -165,108 +165,111 @@
 
 
 	<!-- NEWS FLOW -->
-	<section class="slide whiteSlide margin-top-1 margin-bottom-10">
-		<div class="content">
-			<div class="container-lg">
-					<!-- PR widget -->
-					<div class="fix-5-12 fromLeft" id="pr-widget">
-						<div class="pad lightgrey-border margin-bottom-5">
-							<h3 class="pad-header margin-0">
-								Presskontakt
-							</h3>
-							<div class="margin-left-2" style="margin-top: 15px;">
-								<p class="micro bold">Magnus Janson</p>
-								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@besiktningsman.se</p></a>
-								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
-								<a href="../assets/press/bm-press.zip" download="besiktningsman.se-press-paket.zip"><p class="micro bold text-blue">Logga samt foton</p></a>
-							</div>
-							<h3 class="pad-header margin-0">
-								Besiktningsbloggen
-							</h3>
-							<div class="margin-left-2">
-								<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Har du byggkort?!</p>
-								</a>
-								<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Dags att sluta subventionera byggfel!</p>
-								</a>
-								<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Ställ Skall-krav även på beställaren!</p>
-								</a>
-								<a href="https://medium.com/besiktningsbloggen/lonsammare-projekt-c8f9adba4e2">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
-								</a>
-							</div>
-							<h3 class="pad-header margin-0">
-								Nyhetsbrevet Byggintelligens
-							</h3>
-							<div class="margin-left-2">
-								<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Förstörelsen av Pålsundet</p>
-								</a>
-								<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
-									<p class="micro bold text-blue" style="margin-top: 15px;">Nu samlar vi kraft för 2018!</p>
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<!-- newsflow title -->
-					<h2 class="fix-5-12 left fromRight margin-0" id="news-title">
-						Händelser
-						<div class="border-bottom-grey margin-0"></div>
-					</h2>
-					<!-- newsflow list / latest first -->
-					<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
-						<div >
-							<h3>Kv Ektorp, Nacka</h3>
-							<p>
-								ByggVesta planerar att uppföra 207 studentlägenheter i Ektorp, Nacka.
-								<br>
-								Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/kv_ektorp.jpg" alt="Modelrendering av Ektorp, Nacka.">
-								<p class="micro text-blueGrey center">Ektorp, Nacka</p>
-							</div>
-						</div>
-						<div >
-							<h3>BRF Bergkristallen, Falun</h3>
-							<p>
-								SHH Bostad planerar att bygga 34 bostäder i Falun.
-								<br>
-								Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.jpg" alt="Modelrendering av Bergkristallen i Falun.">
-								<p class="micro text-blueGrey center">Bergkristallen i Falun</p>
-							</div>
-						</div>
-						<div >
-							<h3>Rinkebyterrassen, Rinkeby</h3>
-							<p>
-								Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15 till 16 september.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
-								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+	<section class="slide whiteSlide" id="nyheter">
+		<div class="content margin-top-1">
+			<div class="wrap">
+				<div class="container-lg">
+						<!-- PR widget -->
+						<div class="fix-5-12 fromLeft" id="pr-widget">
+							<div class="pad margin-bottom-8">
+								<h3 class="pad-header margin-0">
+									Presskontakt
+								</h3>
+								<div class="margin-left-2" style="margin-top: 15px;">
+									<p class="common-BodyTitle">Magnus Janson</p>
+									<a href="mailto:magnus.janson@Besiktningsman.se"><p class="common-Link">E-post: magnus.janson@besiktningsman.se</p></a>
+									<a href="tel:+46101654015"><p class="common-Link">Tel: +46101654015</p></a>
+									<a href="../assets/press/bm-press.zip" download="besiktningsman.se-press-paket.zip"><p class="common-Link">Logga samt foton</p></a>
+								</div>
+								<h3 class="pad-header margin-0">
+									Besiktningsbloggen
+								</h3>
+								<div class="margin-left-2">
+									<a href="https://medium.com/besiktningsbloggen/har-du-byggkort-e2adb48b2508">
+										<p class="common-Link" style="margin-top: 15px;">Har du byggkort?!</p>
+									</a>
+									<a href="https://medium.com/@magnusjanson/dags-att-sluta-subventionera-byggfel-e6a3f8f17a90">
+										<p class="common-Link" style="margin-top: 15px;">Dags att sluta subventionera byggfel!</p>
+									</a>
+									<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20">
+										<p class="common-Link" style="margin-top: 15px;">Ställ Skall-krav även på beställaren!</p>
+									</a>
+									<a href="https://medium.com/besiktningsbloggen/lonsammare-projekt-c8f9adba4e2">
+										<p class="common-Link" style="margin-top: 15px;">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
+									</a>
+								</div>
+								<h3 class="pad-header margin-0">
+									Nyhetsbrevet Byggintelligens
+								</h3>
+								<div class="margin-left-2">
+									<a href="http://www.anpdm.com/newsletterweb/45415F4675434A5A4074404759/42455D4570424B5B4B7142405F4B71">
+										<p class="common-Link" style="margin-top: 15px;">Förstörelsen av Pålsundet</p>
+									</a>
+									<a href="http://www.anpdm.com/newsletterweb/45435F43724742584470444B59/42465F427140465940724240514471?noTracking=true">
+										<p class="common-Link" style="margin-top: 15px;">Nu samlar vi kraft för 2018!</p>
+									</a>
+								</div>
 							</div>
 						</div>
 
-						<div>
-							<h3>Backåkra, Norra Djurgårdsstaden</h3>
-							<p>
-								I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius" src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
-								<p class="micro text-blueGrey center">Backåkra, Norra Djurgårdsstaden</p>
+						<!-- newsflow title -->
+						<h2 class="fix-5-12 left fromRight margin-0" id="news-title">
+							Händelser
+							<div class="border-bottom-grey margin-0"></div>
+						</h2>
+						<!-- newsflow list / latest first -->
+						<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
+							<div >
+								<h3>Kv Ektorp, Nacka</h3>
+								<p>
+									ByggVesta planerar att uppföra 207 studentlägenheter i Ektorp, Nacka.
+									<br>
+									Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
+								</p>
+								<div class="fromLeft left">
+									<img class="soft-shadow img-border-radius"src="../assets/img/projects/kv_ektorp.jpg" alt="Modelrendering av Ektorp, Nacka.">
+									<p class="micro text-blueGrey center">Ektorp, Nacka</p>
+								</div>
 							</div>
+							<div >
+								<h3>BRF Bergkristallen, Falun</h3>
+								<p>
+									SHH Bostad planerar att bygga 34 bostäder i Falun.
+									<br>
+									Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
+								</p>
+								<div class="fromLeft left">
+									<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.jpg" alt="Modelrendering av Bergkristallen i Falun.">
+									<p class="micro text-blueGrey center">Bergkristallen i Falun</p>
+								</div>
+							</div>
+							<div >
+								<h3>Rinkebyterrassen, Rinkeby</h3>
+								<p>
+									Rinkebyterrassen är nu färdigställd och hade invigning under helgen den 15 till 16 september.
+								</p>
+								<div class="fromLeft left">
+									<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+									<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+								</div>
+							</div>
+
+							<div>
+								<h3>Backåkra, Norra Djurgårdsstaden</h3>
+								<p>
+									I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
+								</p>
+								<div class="fromLeft left">
+									<img class="soft-shadow img-border-radius" src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
+									<p class="micro text-blueGrey center">Backåkra, Norra Djurgårdsstaden</p>
+								</div>
+							</div>
+
 						</div>
 
-					</div>
-
+				</div>
 			</div>
+
 		</div>
 	</section>
 <!-- Footer -->
