--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -213,7 +213,7 @@
 						</div>
 
 						<!-- newsflow title -->
-						<h2 class="fix-5-12 left fromRight margin-0" id="news-title">
+						<h2 class="fix-5-12 left fromRight margin-0 common-IntroText" id="news-title">
 							Händelser
 							<div class="border-bottom-grey margin-0"></div>
 						</h2>
