updated page name and metas to say its a news page

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -2,26 +2,26 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Publicerat</title>
+	<title>Besiktningsman.se | Nyheter</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/nyheter" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Nyheter från Besiktningsman.se" />
+	<meta property="og:title" content="Nyheter från Besiktningsman.se" />
+	<meta property="og:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
 	<meta property="og:url" content="https://www.besiktningsman.se/nyheter" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:site_name" content="Besiktningsman.se | Nyheter">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:description" content="Här kan du läsa våra blogg-inlägg samt nyhetsbrev" />
+	<meta name="twitter:title" content="Nyheter från Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -92,7 +92,7 @@
 			<div class="left">
 				<ul class="menu crop small bold">
 					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
-					<li><a href="../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -120,7 +120,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<span class="bold small text-blueGrey">Navigation</span>
+
 				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
@@ -133,7 +133,7 @@
 				<li><a href="../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
+				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
 				<li><div class="popupTrigger" data-popup-id="docs"><p>Dokument</p></div></li>
@@ -155,7 +155,7 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Publicerat & Press</h1>
+						<h1 class="hero-title">Nyheter</h1>
 					</div>
 				</div>
 			</div>
@@ -239,7 +239,7 @@
 									Besiktningsman.se kommer att uföra besiktningar genom projektets gång för att säkerställa kvalité.
 								</p>
 								<div class="fromLeft left">
-									<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.jpg" alt="Modelrendering av Bergkristallen i Falun.">
+									<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_bergkristallen.JPG" alt="Modelrendering av Bergkristallen i Falun.">
 									<p class="micro text-blueGrey center">Bergkristallen i Falun</p>
 								</div>
 							</div>
