Updated all the pages nav to reflect the news page name change

--- a/404/index.html
+++ b/404/index.html
@@ -124,7 +124,7 @@
 					<li>
 						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
 					</li>
-					<li><a href="../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -152,7 +152,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<span class="bold small text-blueGrey">Navigation</span>
+
 				<li>
 					<a href="../#tjanster">
 						<p>Tjänster</p>
