--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -91,7 +91,7 @@
 			<div class="left">
 				<ul class="menu crop small bold">
 					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
-					<li><a href="../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
