--- a/projekt/index.html
+++ b/projekt/index.html
@@ -92,7 +92,7 @@
 			<div class="left">
 				<ul class="menu crop small bold">
 					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
-					<li><a href="../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -120,7 +120,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<span class="bold small text-blueGrey">Navigation</span>
+
 				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
 				<br>
 				<br>
@@ -133,7 +133,7 @@
 				<li><a href="../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
+				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
 				<br>
 				<br>
 				<li><div class="popupTrigger" data-popup-id="docs"><p>Dokument</p></div></li>
