--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<li>
 						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
 					</li>
-					<li><a href="nyheter/">Publicerat & Press</a></li>
+					<li><a href="nyheter/">Nyheter</a></li>
 					<li><a href="om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -139,7 +139,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<span class="bold small text-blueGrey">Navigation</span>
+
 				<li>
 					<a href="#tjanster">
 						<p>Tjänster</p>
@@ -170,7 +170,7 @@
 				<br>
 				<li>
 					<a href="nyheter/">
-						<p>Publicerat & Press</p>
+						<p>Nyheter</p>
 					</a>
 				</li>
 				<br>
