--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -150,9 +150,9 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide fade kenBurns" id="landingHeader">
+	<section class="slide fade news-header" id="landingHeader">
 		<div class="content">
-			<div class="container" style="height: 560px;">
+			<div class="container">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Nyheter</h1>
@@ -165,7 +165,7 @@
 
 
 	<!-- NEWS FLOW -->
-	<section class="slide whiteSlide" id="nyheter">
+	<section class="slide whiteSlide" id="news-section">
 		<div class="content margin-top-1">
 			<div class="wrap">
 				<div class="container-lg">
