Keep seeing the old news page nav title

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -97,7 +97,7 @@
 					<li>
 						<div class="popupTrigger" data-popup-id="docs">Dokument</div>
 					</li>
-					<li><a href="../../nyheter/">Publicerat & Press</a></li>
+					<li><a href="../../nyheter/">Nyheter</a></li>
 					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -157,7 +157,7 @@
 				<br>
 				<li>
 					<a href="../../nyheter/">
-						<p>Publicerat & Press</p>
+						<p>Nyheter</p>
 					</a>
 				</li>
 				<br>
