--- a/404/index.html
+++ b/404/index.html
@@ -183,7 +183,7 @@
 				<br>
 				<li>
 					<a href="../nyheter/">
-						<p>Publicerat & Press</p>
+						<p>Nyheter</p>
 					</a>
 				</li>
 				<br>
