--- a/dokument/index.html
+++ b/dokument/index.html
@@ -155,7 +155,7 @@
 				<br>
 				<li>
 					<a href="../nyheter/">
-						<p>Publicerat & Press</p>
+						<p>Nyheter</p>
 					</a>
 				</li>
 				<br>
