--- a/helhetskoncept/index.html
+++ b/helhetskoncept/index.html
@@ -182,7 +182,7 @@
 				<br>
 				<li>
 					<a href="../nyheter/">
-						<p>Publicerat & Press</p>
+						<p>Nyheter</p>
 					</a>
 				</li>
 				<br>
