--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -206,17 +206,17 @@
 				<div class="fix-10-12 left margin-top-1 margin-bottom-2">
 					<ul>
 						<li class="margin-bottom-2">
-							<h2>Entreprenadbesiktning</h2>
-							<p>
+							<h2 class="common-IntroText">Entreprenadbesiktning</h2>
+							<p class="common-BodyText">
 								Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig.
 							</p>
-							<p>
+							<p class="common-BodyText">
 								Vi har en digitaliserad process med Besiktningsman.se:s besiktningsapp som kan omfatta hela byggprocessen eller enstaka tjänster. Vi erbjuder kompletta besiktningsgrupper med bbm för samtliga erforderliga fack.
 							</p>
 						</li>
 						<li>
-							<h3>Besiktningsman.se:s koncept innebär:</h3>
-							<p class="small">
+							<h3 class="common-BodyTitle">Besiktningsman.se:s koncept innebär:</h3>
+							<p class="common-BodyText">
 								• Fortlöpande besiktning från byggstart till fullt färdigt projekt.
 								<br> • Utökad byggherrekontroll enligt ett unikt upplägg.
 								<br> • HBM (huvudbesiktningsman) och KA är en och samma person vilket ger byggherren en djupare kontroll av produktionen.
@@ -224,8 +224,8 @@
 							</p>
 						</li>
 						<li>
-							<h3>I våra priser ingår:</h3>
-							<p class="small">
+							<h3 class="common-BodyTitle">I våra priser ingår:</h3>
+							<p class="common-BodyText">
 								• En projektansvarig från Besiktningsman.se för all kontakt och samordning med besiktningsman eller besiktningsgrupp, inkluderande kallelser, restid, besiktning på plats samt digital distribution av utlåtande via besiktningsportalen.
 								<br> • Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,
 								<br> • Ett uppstartsmöte med parter för bestämmande om rutiner, kommunikation och hur besiktningen genomförs enligt besiktningsplan.
@@ -240,11 +240,11 @@
 		</div>
 
 	</section>
-	<section class="slide whiteSlide autoHeight margin-bottom-10">
+	<section class="slide whiteSlide autoHeight" style="padding-bottom: 20px;">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 left">
-					<h2 class="small bold">Traditionella besiktningar enligt AB-ABT</h2>
+					<h2 class="common-BodyTitle">Traditionella besiktningar enligt AB-ABT</h2>
 
 					<div class="accordion" id="services">
 						<h3>Förbesiktning</h3>
@@ -508,7 +508,7 @@
 					<br>
 
 					<!-- övriga tjänster -->
-					<h2 class="small bold">Övriga tjänster</h2>
+					<h2 class="common-BodyTitle">Övriga tjänster</h2>
 					<div class="accordion">
 						<h3>Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 						<div>
@@ -631,10 +631,8 @@
 							</ul>
 						</div>
 					</div>
-
-					<!-- grid div end -->
 				</div>
-				<br>
+				<!-- <br>
 				<br>
 				<div class="fix-10-12 left margin-bottom-3">
 					<h3 class="margin-0">Redo att sätta igång?</h3>
@@ -646,10 +644,45 @@
 					<br>
 					<br>
 					<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
+		<section class="slide white form-section">
+			<div class="container-lg">
+					<div class="formBackground form-column">
+							<h3 class="pad-header margin-0 text-blueGrey center">
+								Redo att boka?
+								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+							</h3>
+							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+					</div>
+					<div class="secondary-column">
+						<div class="customers">
+							<p class="copy-1">Du är i gott sällskap.</p>
+							<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+							<ul class="customer-logos">
+								<li class="customer-logo">
+									<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+								</li>
+								<!-- <li class="customer-logo">
+									<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+								</li> -->
+								<li class="customer-logo">
+									<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+								</li>
+								<li class="customer-logo">
+									<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+								</li>
+								<li class="customer-logo">
+									<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+								</li>
+							</ul>
+						</div>
+					</div>
+
+			</div>
+		</section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
 		<div class="content">
