updated the BRF services page style + added orderform

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -186,7 +186,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Besiktningstjänster för bostadsrättsföreningar</h1>
+						<h1 class="hero-title">Bostadsrättsföreningar</h1>
 						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid nyproduktion, <br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
 						</p>
@@ -202,33 +202,32 @@
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1">
 
-					<h2 style="margin-left: -3px;">Bostadsrättsföreningar</h2>
-					<p>
+					<h2 style="margin-left: -3px;" class="common-IntroText">Besiktningstjänster för bostadsrättsföreningar</h2>
+					<p class="common-BodyText">
 						Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig.
 						<br>
-						<br> Vi har en digitaliserad process med Besiktningsman.se:s besiktningsapp som kan omfatta hela byggprocessen eller enstaka tjänster. Vi erbjuder kompletta besiktningsgrupper med bbm (biträdande besiktningsmän) för samtliga erforderliga fack.
-						<br>
-						<br> För bostadsrättsföreningar erbjuder vi fasta priser på besiktningar gällande de flesta åtgärder i en fastighet. I annat fall sker timdebitering.
+						Vi har en digitaliserad process med <a href="../../helhetskoncept/" class="common-Link">Besiktningsman.se:s besiktningsapp</a> som kan omfatta hela byggprocessen eller enstaka tjänster. Vi erbjuder kompletta besiktningsgrupper med bbm (biträdande besiktningsmän) för samtliga erforderliga fack.
+						För bostadsrättsföreningar erbjuder vi fasta priser på besiktningar gällande de flesta åtgärder i en fastighet. I annat fall sker timdebitering.
 					</p>
-					<h3>I våra priser ingår:</h3>
-					<p class="small">
+					<h3 class="common-BodyTitle">I våra priser ingår:</h3>
+					<p class="common-BodyText">
 						• En projektansvarig från Besiktningsman.se för all kontakt och samordning med besiktningsman eller besiktningsgrupp inkluderande kallelser, restid, besiktning på plats, samt digital distribution av utlåtande via besiktningsportalen.
 						<br> • Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,
 						<br> • Ett informationsmöte med brf-styrelsen om hur besiktningen går till, kriterier samt genomförande, beroende på typ av besiktning.
 					</p>
-					<p>
+					<p class="common-BodyText">
 						Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-, 5-, eller 10-års besiktning offererar vi ett fast pris till er.
 					</p>
 				</div>
 
 			</div>
 		</div>
-		<section class="slide whiteSlide autoHeight margin-bottom-10">
+		<section class="slide whiteSlide autoHeight">
 
 			<div class="container">
 				<div class="container-lg">
 					<div class="fix-10-12 left">
-						<h2 class="small bold">Traditionella besiktningar enligt AB-ABT</h2>
+						<h2 class="common-BodyTitle">Traditionella besiktningar enligt AB-ABT</h2>
 
 						<div class="accordion">
 							<h3>Förbesiktning</h3>
@@ -623,7 +622,7 @@
 							<br> • Gårdshus-återvinning-källsortering
 						</p>
 					</div>
-					<br>
+					<!-- <br>
 					<br>
 					<div class="fix-10-12 left margin-bottom-3">
 						<h3 class="margin-0">Redo att sätta igång?</h3>
@@ -636,14 +635,47 @@
 						<br>
 						<br>
 						<a href="tel:0101654000" class="bold text-blue">Alternativt ring oss på: 010-165 40 00</a>
-					</div>
+					</div> -->
 
 				</div>
 			</div>
 
 		</section>
+	<section class="slide white form-section">
+		<div class="container-lg">
+				<div class="formBackground form-column">
+						<h3 class="pad-header margin-0 text-blueGrey center">
+							Redo att boka?
+							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+						</h3>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+				</div>
+				<div class="secondary-column">
+					<div class="customers">
+						<p class="copy-1">Du är i gott sällskap.</p>
+						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+						<ul class="customer-logos">
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							</li>
+							<!-- <li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+							</li> -->
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+							</li>
+						</ul>
+					</div>
+				</div>
 
-
+		</div>
 	</section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
