--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -185,7 +185,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Entreprenadbesiktning för <br>nyproduktion och ROT</h1>
+						<h1 class="hero-title">Entreprenadbesiktningar</h1>
 						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
 							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
@@ -648,42 +648,42 @@
 			</div>
 		</div>
 	</section>
-		<section class="slide white form-section">
-			<div class="container-lg">
-					<div class="formBackground form-column">
-							<h3 class="pad-header margin-0 text-blueGrey center">
-								Redo att boka?
-								<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-							</h3>
-							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
-							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+	<section class="slide white form-section">
+		<div class="container-lg">
+				<div class="formBackground form-column">
+						<h3 class="pad-header margin-0 text-blueGrey center">
+							Redo att boka?
+							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+						</h3>
+						<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/vHXN4C" data-transparency="100" data-hide-headers=true style="width: 100%; height: 400px;"></div>
+						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+				</div>
+				<div class="secondary-column">
+					<div class="customers">
+						<p class="copy-1">Du är i gott sällskap.</p>
+						<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
+						<ul class="customer-logos">
+							<li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
+							</li>
+							<!-- <li class="customer-logo">
+								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
+							</li> -->
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
+							</li>
+							<li class="customer-logo">
+								<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
+							</li>
+						</ul>
 					</div>
-					<div class="secondary-column">
-						<div class="customers">
-							<p class="copy-1">Du är i gott sällskap.</p>
-							<p class="copy-2">Gör som många andra och anlita Besiktningsman.se</p>
-							<ul class="customer-logos">
-								<li class="customer-logo">
-									<img src="../../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
-								</li>
-								<!-- <li class="customer-logo">
-									<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-								</li> -->
-								<li class="customer-logo">
-									<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
-								</li>
-								<li class="customer-logo">
-									<img src="../../assets/img/logos/tjanster/ncc_logo.png" alt="NCC" style="padding-bottom: 15px;">
-								</li>
-								<li class="customer-logo">
-									<img src="../../assets/img/logos/tjanster/peab_logo.png" alt="PEAB">
-								</li>
-							</ul>
-						</div>
-					</div>
+				</div>
 
-			</div>
-		</section>
+		</div>
+	</section>
 	<!-- Footer -->
 	<section class="slide customFooter autoHeight">
 		<div class="content">
