Updated twitter meta

--- a/404/index.html
+++ b/404/index.html
@@ -19,7 +19,7 @@
 	<meta property="og:url" content="https://www.besiktningsman.se/404" />
 	<meta property="og:site_name" content="Besiktningsman.se | 404 - Sidan finns inte">
 	<meta property="og:image" content="../assets/img/backgrounds/404.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="404 - Sidan finns inte. Gå tillbaka till huvudsidan för att komma vidare." />
 	<meta name="twitter:title" content="Sidan du besökte finns inte." />
 	<!-- Fonts and Material Icons -->
