--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -21,7 +21,7 @@
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
 	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -185,7 +185,7 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Entreprenadbesiktningar</h1>
+						<h1 class="hero-title">Besiktningstjänster för entreprenader</h1>
 						<p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
 							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
