--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="assets/img/backgrounds/og_image.jpg" />
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
