--- a/karriar/index.html
+++ b/karriar/index.html
@@ -19,7 +19,7 @@
 	<meta property="og:url" content="https://www.besiktningsman.se/" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
