--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -19,7 +19,7 @@
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
 	<!-- Fonts and Material Icons -->
@@ -493,7 +493,7 @@
 						<br>
 
 						<!-- övriga tjänster -->
-						<h2 class="small bold">Övriga tjänster</h2>
+						<h2 class="common-BodyTitle">Övriga tjänster</h2>
 						<div class="accordion margin-bottom-3">
 							<h3>KA-Kontrollansvarig enligt Plan- och bygglagen, kvalificerad och normal.</h3>
 							<div>
@@ -596,8 +596,8 @@
 						<!-- grid div end -->
 					</div>
 					<div class="fix-10-12">
-						<h2 class="small bold">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
-						<p class="small">
+						<h2 class="common-BodyTitle">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
+						<p class="common-BodyText">
 							• Målningsbesiktningar
 							<br> • Badrumsbesiktningar-råyta-tätskikt-färdigställt
 							<br> • Tvättstugebesiktningar
