--- a/tjanster/entreprenad/forbesiktning/index.html
+++ b/tjanster/entreprenad/forbesiktning/index.html
@@ -2,7 +2,7 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Entreprenad</title>
+	<title>Besiktningsman.se | Entreprenad förbesiktning</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -21,7 +21,7 @@
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:title" content="Entreprenadbesiktning för nyproduktion och ROT" />
 	<meta name="twitter:description" content="Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster för entreprenadbesiktning av nyproduktion och ROT (Renovering, ombyggnad, Tillbyggnad), samt KA-Kontrollansvarig." />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
+	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
